--- a/report.ipynb
+++ b/report.ipynb
@@ -65,11 +65,6 @@
     {
       "cell_type": "markdown",
       "metadata": {},
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
       "source": [
         "##General information\n",
         "\n",
@@ -103,49 +98,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
-      "outputs": [],
-      "source": [
-        "\n",
-        "| Attribute Name                     | Data Type | Description                                                               | Possible Values                                            |\n",
-        "|------------------------------------|-----------|---------------------------------------------------------------------------|------------------------------------------------------------|\n",
-        "| id                                 | Integer   | Unique identifier for the passenger                                       | Numeric IDs                                                |\n",
-        "| Gender                             | String    | Gender of the passenger                                                   | Male, Female                                               |\n",
-        "| Customer Type                      | String    | Type of the customer                                                      | Loyal Customer, disloyal Customer                          |\n",
-        "| Age                                | Integer   | Age of the passenger                                                      | Numeric ages                                               |\n",
-        "| Type of Travel                     | String    | Purpose of the flight                                                     | Business travel, Personal Travel                           |\n",
-        "| Class                              | String    | Class of the flight                                                       | Eco, Business, Eco Plus                                    |\n",
-        "| Flight Distance                    | Integer   | Distance of the flight                                                    | Numeric distances  31 to 4983                              |\n",
-        "| Inflight wifi service              | Integer   | Satisfaction level with inflight wifi service                             | 0 to 5                                                     |\n",
-        "| Departure/Arrival time convenient  | Integer   | Satisfaction level with departure/arrival time convenience                | 0 to 5                                                     |\n",
-        "| Ease of Online booking             | Integer   | Satisfaction level with online booking ease                               | 0 to 5                                                     |\n",
-        "| Gate location                      | Integer   | Satisfaction level with gate location                                     | 0 to 5                                                     |\n",
-        "| Food and drink                     | Integer   | Satisfaction level with food and drink                                    | 0 to 5                                                     |\n",
-        "| Online boarding                    | Integer   | Satisfaction level with online boarding                                   | 0 to 5                                                     |\n",
-        "| Seat comfort                       | Integer   | Satisfaction level with seat comfort                                      | 0 to 5                                                     |\n",
-        "| Inflight entertainment             | Integer   | Satisfaction level with inflight entertainment                            | 0 to 5                                                     |\n",
-        "| On-board service                   | Integer   | Satisfaction level with on-board service                                  | 0 to 5                                                     |\n",
-        "| Leg room service                   | Integer   | Satisfaction level with leg room service                                  | 0 to 5                                                     |\n",
-        "| Baggage handling                   | Integer   | Satisfaction level with baggage handling                                  | 0 to 5                                                     |\n",
-        "| Checkin service                    | Integer   | Satisfaction level with checkin service                                   | 0 to 5                                                     |\n",
-        "| Inflight service                   | Integer   | Satisfaction level with inflight service                                  | 0 to 5                                                     |\n",
-        "| Cleanliness                        | Integer   | Satisfaction level with cleanliness                                       | 0 to 5                                                     |\n",
-        "| Departure Delay in Minutes         | Integer   | Minutes delayed at departure                                              | Numeric minutes 0-1592                                     |\n",
-        "| Arrival Delay in Minutes           | Integer   | Minutes delayed on arrival                                                | Numeric minutes 0-158000                                   |\n",
-        "| satisfaction                       | String    | Overall satisfaction with the flight                                      | satisfied, neutral or dissatisfied                         |\n"
-      ]
+      "outputs": [
+        {
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (2649843405.py, line 1)",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;36m  Cell \u001b[0;32mIn[4], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    | Attribute Name                     | Data Type | Description                                                               | Possible Values                                            |\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ],
+      "source": []
     }
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python (Pyodide)",
+      "display_name": "Python 3",
       "language": "python",
-      "name": "python"
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
-        "name": "python",
+        "name": "ipython",
         "version": 3
       },
       "file_extension": ".py",
@@ -153,7 +129,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8"
+      "version": "3.9.6"
     }
   },
   "nbformat": 4,
