--- a/Airline-Data.ipynb
+++ b/Airline-Data.ipynb
@@ -597,11 +597,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "| Attribute Name                     | Data Type | Description                                                               | Possible Values                                            |\n",
+            "|------------------------------------|-----------|---------------------------------------------------------------------------|------------------------------------------------------------|\n",
+            "| id                                 | Integer   | Unique identifier for the passenger                                       | Numeric IDs                                                |\n",
+            "| Gender                             | String    | Gender of the passenger                                                   | Male, Female                                               |\n",
+            "| Customer Type                      | String    | Type of the customer                                                      | Loyal Customer, disloyal Customer                          |\n",
+            "| Age                                | Integer   | Age of the passenger                                                      | Numeric ages                                               |\n",
+            "| Type of Travel                     | String    | Purpose of the flight                                                     | Business travel, Personal Travel                           |\n",
+            "| Class                              | String    | Class of the flight                                                       | Eco, Business, Eco Plus                                    |\n",
+            "| Flight Distance                    | Integer   | Distance of the flight                                                    | Numeric distances  31 to 4983                              |\n",
+            "| Inflight wifi service              | Integer   | Satisfaction level with inflight wifi service                             | 0 to 5                                                     |\n",
+            "| Departure/Arrival time convenient  | Integer   | Satisfaction level with departure/arrival time convenience                | 0 to 5                                                     |\n",
+            "| Ease of Online booking             | Integer   | Satisfaction level with online booking ease                               | 0 to 5                                                     |\n",
+            "| Gate location                      | Integer   | Satisfaction level with gate location                                     | 0 to 5                                                     |\n",
+            "| Food and drink                     | Integer   | Satisfaction level with food and drink                                    | 0 to 5                                                     |\n",
+            "| Online boarding                    | Integer   | Satisfaction level with online boarding                                   | 0 to 5                                                     |\n",
+            "| Seat comfort                       | Integer   | Satisfaction level with seat comfort                                      | 0 to 5                                                     |\n",
+            "| Inflight entertainment             | Integer   | Satisfaction level with inflight entertainment                            | 0 to 5                                                     |\n",
+            "| On-board service                   | Integer   | Satisfaction level with on-board service                                  | 0 to 5                                                     |\n",
+            "| Leg room service                   | Integer   | Satisfaction level with leg room service                                  | 0 to 5                                                     |\n",
+            "| Baggage handling                   | Integer   | Satisfaction level with baggage handling                                  | 0 to 5                                                     |\n",
+            "| Checkin service                    | Integer   | Satisfaction level with checkin service                                   | 0 to 5                                                     |\n",
+            "| Inflight service                   | Integer   | Satisfaction level with inflight service                                  | 0 to 5                                                     |\n",
+            "| Cleanliness                        | Integer   | Satisfaction level with cleanliness                                       | 0 to 5                                                     |\n",
+            "| Departure Delay in Minutes         | Integer   | Minutes delayed at departure                                              | Numeric minutes 0-1592                                     |\n",
+            "| Arrival Delay in Minutes           | Integer   | Minutes delayed on arrival                                                | Numeric minutes 0-158000                                   |\n",
+            "| satisfaction                       | String    | Overall satisfaction with the flight                                      | satisfied, neutral or dissatisfied                         |\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
-        "\n",
+        "table = \"\"\"\n",
         "| Attribute Name                     | Data Type | Description                                                               | Possible Values                                            |\n",
         "|------------------------------------|-----------|---------------------------------------------------------------------------|------------------------------------------------------------|\n",
         "| id                                 | Integer   | Unique identifier for the passenger                                       | Numeric IDs                                                |\n",
@@ -627,7 +662,10 @@
         "| Cleanliness                        | Integer   | Satisfaction level with cleanliness                                       | 0 to 5                                                     |\n",
         "| Departure Delay in Minutes         | Integer   | Minutes delayed at departure                                              | Numeric minutes 0-1592                                     |\n",
         "| Arrival Delay in Minutes           | Integer   | Minutes delayed on arrival                                                | Numeric minutes 0-158000                                   |\n",
-        "| satisfaction                       | String    | Overall satisfaction with the flight                                      | satisfied, neutral or dissatisfied                         |\n"
+        "| satisfaction                       | String    | Overall satisfaction with the flight                                      | satisfied, neutral or dissatisfied                         |\n",
+        "\"\"\"\n",
+        "\n",
+        "print(table)\n"
       ]
     }
   ],
@@ -647,7 +685,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.13"
+      "version": "3.9.6"
     }
   },
   "nbformat": 4,
