--- a/Airline-Data.ipynb
+++ b/Airline-Data.ipynb
@@ -80,7 +80,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Structure :"
+        "### Structure"
       ]
     },
     {
@@ -567,32 +567,55 @@
       "source": [
         "##General information\n",
         "\n",
-        "Number of Attributes :24 , Number of Object:500,Class lable: satisfaction has tow level Satisfaction if the passenger is satisfied,neutral or dissatisfaction if not .\n",
+        "Number of Attributes :24, Number of Object:500, Class lable: satisfaction has tow level Satisfaction if the passenger is satisfied,neutral or dissatisfaction if not .\n",
         "\n",
-        "1-id : Unique identifier for the passenger \n",
-        "2- Gender:Gender of the passengers (Female, Male)\n",
-        "3- Customer Type:The customer type (Loyal customer, disloyal customer)\n",
-        "4- Age:The actual age of the passengers\n",
-        "5- Type of Travel:Purpose of the flight of the passengers (Personal Travel, Business Travel)\"\n",
-        "6-Class:Travel class in the plane of the passengers (Business, Eco, Eco Plus)\n",
-        "7- Flight distance:The flight distance of this journey\n",
-        "8- \"Inflight wifi service:Satisfaction level of the inflight wifi service (0:Not Applicable;1-5)\"\n",
-        "9= Departure/Arrival time convenient : Satisfaction level of Departure/Arrival time convenient\n",
-        "10- Ease of Online booking:Satisfaction level of online booking\n",
-        "11- Gate location : Satisfaction level of Gate location\n",
-        "12- Food and drink : Satisfaction level of Food and drink\n",
-        "13- Online boarding:Satisfaction level of online boarding\n",
-        "14- Seat comfort : Satisfaction level of Seat comfort\n",
-        "15- Inflight entertainment : Satisfaction level of inflight entertainment\n",
-        "16- On-board service : Satisfaction level of On-board service\n",
-        "17- Leg room service : Satisfaction level of Leg room service\n",
-        "18- Baggage handling : Satisfaction level of baggage handling\n",
-        "19- Check-in service : Satisfaction level of Check-in service\n",
-        "20- Inflight service:Satisfaction level of inflight service\n",
-        "21- Cleanliness : Satisfaction level of Cleanliness\n",
-        "22- Departure Delay in Minutes : Minutes delayed when departure\n",
-        "23- Arrival Delay in Minutes : Minutes delayed when Arrival\n",
-        "24- Satisfaction:Airline satisfaction level(Satisfaction, neutral or dissatisfaction)"
+        "1- id : Unique identifier for the passenger \n",
+        "\n",
+        "2- Gender: Gender of the passengers (Female, Male)\n",
+        "\n",
+        "3- Customer Type: The customer type (Loyal customer, disloyal customer)\n",
+        "\n",
+        "4- Age: The actual age of the passengers\n",
+        "\n",
+        "5- Type of Travel: Purpose of the flight of the passengers (Personal Travel, Business Travel)\"\n",
+        "\n",
+        "6- Class: Travel class in the plane of the passengers (Business, Eco, Eco Plus)\n",
+        "\n",
+        "7- Flight distance: The flight distance of this journey\n",
+        "\n",
+        "8- Inflight wifi service: Satisfaction level of the inflight wifi service (0:Not Applicable;1-5)\"\n",
+        "\n",
+        "9- Departure/Arrival time convenient: Satisfaction level of Departure/Arrival time convenient\n",
+        "\n",
+        "10- Ease of Online booking: Satisfaction level of online booking\n",
+        "\n",
+        "11- Gate location: Satisfaction level of Gate location\n",
+        "\n",
+        "12- Food and drink: Satisfaction level of Food and drink\n",
+        "\n",
+        "13- Online boarding: Satisfaction level of online boarding\n",
+        "\n",
+        "14- Seat comfort: Satisfaction level of Seat comfort\n",
+        "\n",
+        "15- Inflight entertainment: Satisfaction level of inflight entertainment\n",
+        "\n",
+        "16- On-board service: Satisfaction level of On-board service\n",
+        "\n",
+        "17- Leg room service: Satisfaction level of Leg room service\n",
+        "\n",
+        "18- Baggage handling: Satisfaction level of baggage handling\n",
+        "\n",
+        "19- Check-in service: Satisfaction level of Check-in service\n",
+        "\n",
+        "20- Inflight service: Satisfaction level of inflight service\n",
+        "\n",
+        "21- Cleanliness: Satisfaction level of Cleanliness\n",
+        "\n",
+        "22- Departure Delay in Minutes: Minutes delayed when departure\n",
+        "\n",
+        "23- Arrival Delay in Minutes: Minutes delayed when Arrival\n",
+        "\n",
+        "24- Satisfaction: Airline satisfaction level(Satisfaction, neutral or dissatisfaction)"
       ]
     },
     {
