--- a/Airline-Data.ipynb
+++ b/Airline-Data.ipynb
@@ -51,87 +51,7 @@
         "## General information of the dataset:"
       ]
     },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Dimensions"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "(500, 24)\n"
-          ]
-        }
-      ],
-      "source": [
-        "shape= df.shape\n",
-        "print (shape)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Structure :"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 11,
-      "metadata": {
-        "trusted": true
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 500 entries, 0 to 499\n",
-            "Data columns (total 24 columns):\n",
-            " #   Column                             Non-Null Count  Dtype \n",
-            "---  ------                             --------------  ----- \n",
-            " 0   id                                 500 non-null    int64 \n",
-            " 1   Gender                             500 non-null    object\n",
-            " 2   Customer Type                      500 non-null    object\n",
-            " 3   Age                                500 non-null    int64 \n",
-            " 4   Type of Travel                     500 non-null    object\n",
-            " 5   Class                              500 non-null    object\n",
-            " 6   Flight Distance                    500 non-null    int64 \n",
-            " 7   Inflight wifi service              500 non-null    int64 \n",
-            " 8   Departure/Arrival time convenient  500 non-null    int64 \n",
-            " 9   Ease of Online booking             500 non-null    int64 \n",
-            " 10  Gate location                      500 non-null    int64 \n",
-            " 11  Food and drink                     500 non-null    int64 \n",
-            " 12  Online boarding                    500 non-null    int64 \n",
-            " 13  Seat comfort                       500 non-null    int64 \n",
-            " 14  Inflight entertainment             500 non-null    int64 \n",
-            " 15  On-board service                   500 non-null    int64 \n",
-            " 16  Leg room service                   500 non-null    int64 \n",
-            " 17  Baggage handling                   500 non-null    int64 \n",
-            " 18  Checkin service                    500 non-null    int64 \n",
-            " 19  Inflight service                   500 non-null    int64 \n",
-            " 20  Cleanliness                        500 non-null    int64 \n",
-            " 21  Departure Delay in Minutes         500 non-null    int64 \n",
-            " 22  Arrival Delay in Minutes           500 non-null    int64 \n",
-            " 23  satisfaction                       500 non-null    object\n",
-            "dtypes: int64(19), object(5)\n",
-            "memory usage: 93.9+ KB\n"
-          ]
-        }
-      ],
-      "source": [
-        "df.info()"
-      ]
-    },
+
     {
       "cell_type": "markdown",
       "metadata": {},
@@ -567,32 +487,60 @@
       "source": [
         "##General information\n",
         "\n",
-        "Number of Attributes :24 , Number of Object:500,Class lable: satisfaction has tow level Satisfaction if the passenger is satisfied,neutral or dissatisfaction if not .\n",
+        "Number of Attributes: 24 
         "\n",
-        "1-id : Unique identifier for the passenger \n",
-        "2- Gender:Gender of the passengers (Female, Male)\n",
-        "3- Customer Type:The customer type (Loyal customer, disloyal customer)\n",
-        "4- Age:The actual age of the passengers\n",
-        "5- Type of Travel:Purpose of the flight of the passengers (Personal Travel, Business Travel)\"\n",
-        "6-Class:Travel class in the plane of the passengers (Business, Eco, Eco Plus)\n",
-        "7- Flight distance:The flight distance of this journey\n",
-        "8- \"Inflight wifi service:Satisfaction level of the inflight wifi service (0:Not Applicable;1-5)\"\n",
-        "9= Departure/Arrival time convenient : Satisfaction level of Departure/Arrival time convenient\n",
-        "10- Ease of Online booking:Satisfaction level of online booking\n",
-        "11- Gate location : Satisfaction level of Gate location\n",
-        "12- Food and drink : Satisfaction level of Food and drink\n",
-        "13- Online boarding:Satisfaction level of online boarding\n",
-        "14- Seat comfort : Satisfaction level of Seat comfort\n",
-        "15- Inflight entertainment : Satisfaction level of inflight entertainment\n",
-        "16- On-board service : Satisfaction level of On-board service\n",
-        "17- Leg room service : Satisfaction level of Leg room service\n",
-        "18- Baggage handling : Satisfaction level of baggage handling\n",
-        "19- Check-in service : Satisfaction level of Check-in service\n",
-        "20- Inflight service:Satisfaction level of inflight service\n",
-        "21- Cleanliness : Satisfaction level of Cleanliness\n",
-        "22- Departure Delay in Minutes : Minutes delayed when departure\n",
-        "23- Arrival Delay in Minutes : Minutes delayed when Arrival\n",
-        "24- Satisfaction:Airline satisfaction level(Satisfaction, neutral or dissatisfaction)"
+        Number of Object: 500
+        "\n",
+        Class lable: satisfaction has tow level Satisfaction if the passenger is satisfied,neutral or dissatisfaction if not .\n",
+        "\n",
+        "\n",
+        "1-id: Unique identifier for the passenger \n",
+        "\n",
+        "2- Gender: Gender of the passengers (Female, Male)\n",
+        "\n",
+        "3- Customer Type: The customer type (Loyal customer, disloyal customer)\n",
+        "\n",
+        "4- Age: The actual age of the passengers\n",
+        "\n",
+        "5- Type of Travel: Purpose of the flight of the passengers (Personal Travel, Business Travel)\"\n",
+        "\n",
+        "6-Class: Travel class in the plane of the passengers (Business, Eco, Eco Plus)\n",
+        "\n",
+        "7- Flight distance: The flight distance of this journey\n",
+        "\n",
+        "8- \"Inflight wifi service: Satisfaction level of the inflight wifi service (0:Not Applicable;1-5)\"\n",
+        "\n",
+        "9- Departure/Arrival time convenient: Satisfaction level of Departure/Arrival time convenient\n",
+        "\n",
+        "10- Ease of Online booking: Satisfaction level of online booking\n",
+        "\n",
+        "11- Gate location: Satisfaction level of Gate location\n",
+        "\n",
+        "12- Food and drink: Satisfaction level of Food and drink\n",
+        "\n",
+        "13- Online boarding: Satisfaction level of online boarding\n",
+        "\n",
+        "14- Seat comfort: Satisfaction level of Seat comfort\n",
+        "\n",
+        "15- Inflight entertainment: Satisfaction level of inflight entertainment\n",
+        "\n",
+        "16- On-board service: Satisfaction level of On-board service\n",
+        "\n",
+        "17- Leg room service: Satisfaction level of Leg room service\n",
+        "\n",
+        "18- Baggage handling: Satisfaction level of baggage handling\n",
+        "\n",
+        "19- Check-in service: Satisfaction level of Check-in service\n",
+        "\n",
+        "20- Inflight service: Satisfaction level of inflight service\n",
+        "\n",
+        "21- Cleanliness: Satisfaction level of Cleanliness\n",
+        "\n",
+        "22- Departure Delay in Minutes: Minutes delayed when departure\n",
+        "\n",
+        "23- Arrival Delay in Minutes: Minutes delayed when Arrival\n",
+        "\n",
+        "24- Satisfaction: Airline satisfaction level(Satisfaction, neutral or dissatisfaction)"
       ]
     },
     {
