--- a/Airline-Data.ipynb
+++ b/Airline-Data.ipynb
@@ -487,11 +487,11 @@
       "source": [
         "##General information\n",
         "\n",
-        "Number of Attributes: 24 
+        "Number of Attributes: 24",
         "\n",
-        Number of Object: 500
+        "Number of Object: 500",
         "\n",
-        Class lable: satisfaction has tow level Satisfaction if the passenger is satisfied,neutral or dissatisfaction if not .\n",
+        "Class lable: satisfaction has tow level Satisfaction if the passenger is satisfied,neutral or dissatisfaction if not .\n",
         "\n",
         "\n",
         "1-id: Unique identifier for the passenger \n",
