--- a/Airline-Data.ipynb
+++ b/Airline-Data.ipynb
@@ -487,9 +487,9 @@
       "source": [
         "##General information\n",
         "\n",
-        "Number of Attributes: 24",
+        "Number of Attributes: 24\n",
         "\n",
-        "Number of Object: 500",
+        "Number of Object: 500\n",
         "\n",
         "Class lable: satisfaction has tow level Satisfaction if the passenger is satisfied,neutral or dissatisfaction if not .\n",
         "\n",
