--- a/Airline-Data.ipynb
+++ b/Airline-Data.ipynb
@@ -62,7 +62,7 @@
                 "Class lable: satisfaction has tow level Satisfaction if the passenger is satisfied,neutral or dissatisfaction if not .\n",
                 "\n",
                 "\n",
-                "1-id: Unique identifier for the passenger \n",
+                "1- id: Unique identifier for the passenger \n",
                 "\n",
                 "2- Gender: Gender of the passengers (Female, Male)\n",
                 "\n",
@@ -72,11 +72,11 @@
                 "\n",
                 "5- Type of Travel: Purpose of the flight of the passengers (Personal Travel, Business Travel)\"\n",
                 "\n",
-                "6-Class: Travel class in the plane of the passengers (Business, Eco, Eco Plus)\n",
+                "6- Class: Travel class in the plane of the passengers (Business, Eco, Eco Plus)\n",
                 "\n",
                 "7- Flight distance: The flight distance of this journey\n",
                 "\n",
-                "8- \"Inflight wifi service: Satisfaction level of the inflight wifi service (0:Not Applicable;1-5)\"\n",
+                "8- Inflight wifi service: Satisfaction level of the inflight wifi service (0:Not Applicable;1-5)\n",
                 "\n",
                 "9- Departure/Arrival time convenient: Satisfaction level of Departure/Arrival time convenient\n",
                 "\n",
