--- a/Airline-Data.ipynb
+++ b/Airline-Data.ipynb
@@ -59,7 +59,7 @@
                 "\n",
                 "Number of Object: 500\n",
                 "\n",
-                "Class lable: satisfaction has tow level Satisfaction if the passenger is satisfied,neutral or dissatisfaction if not .\n",
+                "Class Lable: satisfaction has tow level Satisfaction if the passenger is satisfied,neutral or dissatisfaction if not .\n",
                 "\n",
                 "\n",
                 "1- id: Unique identifier for the passenger \n",
