--- a/Airline-Data.ipynb
+++ b/Airline-Data.ipynb
@@ -62,7 +62,7 @@
                 "Class Lable: satisfaction has tow level Satisfaction if the passenger is satisfied, neutral or dissatisfaction if not\n",
                 "\n",
                 "\n",
-                "1- id: Unique identifier for the passenger \n",
+                "1- ID: Unique identifier for the passenger \n",
                 "\n",
                 "2- Gender: Gender of the passengers (Female, Male)\n",
                 "\n",
